@@ -25,6 +25,10 @@ repositories {
 }
 
 dependencies {
+	tasks.withType(JavaCompile) {
+		options.compilerArgs += ['--enable-preview']
+	}
+
 	//Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	//ThymeLeaf
